# obsidian-deer-toolbox

./: .editorconfig  .gitignore  Cargo.toml  LICENSE_MIT  build.md  build.sh  esbuild.config.mjs  manifest.json  package.json  pnpm-lock.yaml  rollup.config.js
pkg/: obsidian_deer_toolbox_wasm.d.ts  obsidian_deer_toolbox_wasm.js  obsidian_deer_toolbox_wasm_bg.wasm  obsidian_deer_toolbox_wasm_bg.wasm.d.ts  package.json
src/: lib.rs
ts/: base_plugin.ts  main.ts  wasm_polyfill.ts
